카테고리 비율 수정 50, 사이즈만 75기준으로

--- a/src/main/resources/templates/제품상세테스트.html
+++ b/src/main/resources/templates/제품상세테스트.html
@@ -43,9 +43,9 @@
         <!-- 카테고리 점수 -->
         <div class="product-discription-category-score">
 
-        <!-- 카테고리 백분율 상위 몇퍼센트인지-->
+        <!-- 카테고리 백분율 하위 몇퍼센트인지-->
         <div>
-          <h3>상위 %에 해당합니다</h3>
+          <h3>%</h3>
           <div th:text="'편한: '+ ${prodPercent.ctComfPercentileRank}"></div>
           <div
             th:text="'푹신한: '+ ${prodPercent.ctFluffyPercentileRank}"
