--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -13,7 +13,7 @@
   <th:block layout:fragment="header"></th:block>
   <!-- 콘텐츠 -->
   <div layout:fragment="content">
-    <div id="home" class="page active">
+    <div id="home">
       <div class="banner-slider">
         <button class="prev-slide">〈</button>
         <!-- 이전 슬라이드 버튼 -->
