--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -13,7 +13,7 @@
   <th:block layout:fragment="header"></th:block>
   <!-- 콘텐츠 -->
   <div layout:fragment="content">
-    <div id="home" class="page active">
+    <div id="home" >
       <div class="banner-slider">
         <button class="prev-slide">〈</button>
         <!-- 이전 슬라이드 버튼 -->
@@ -43,6 +43,10 @@
         <!-- 아래 예시로 18개 중 1~3만 예시로 작성 -->
         <th:block th:each="product : ${prodCateList}">
           <div class="product-card">
+              <!-- 찜버튼 만들기 --> 
+              <div class="wish-button">
+                <img src="/images/hearts/like.png" alt="찜하기" class="heart-icon" />
+              </div>
             <a th:href="@{제품상세테스트(pId=${product.pId})}">
               <img th:src="${product.pImage}" alt="상품 이미지" />
               <div class="product-info">
