--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -48,6 +48,7 @@
             <div class="product-brand" th:text="${product.pBrand}"></div>
             <div class="product-name" th:text="${product.pName}"></div>
             <div class="product-rating" name="pd_rating" th:text="${product.pRating}"></div>
+            <div class="product-sentiment" name="sentiment" th:text="${product.sentiment}"></div>
             <div class="price-line">
               <span class="product-discount" name="discount" th:text="${product.pDiscount}"></span>
               <span class="product-price" th:text="${product.pPrice}"></span>
