--- a/src/main/resources/templates/filterCategory.html
+++ b/src/main/resources/templates/filterCategory.html
@@ -7,20 +7,13 @@
   <th:block layout:fragment="script"></th:block>
 
   <th:block layout:fragment="css">
-    <style>
-      input[type="checkbox"],
-      input[type="radio"] {
-        display: none;
-        /* Hide the checkbox input */
-      }
-    </style>
   </th:block>
 
   <th:block layout:fragment="header"></th:block>
 
   <div layout:fragment="content">
     <div id="category" class="page">
-      <div class="section-title">당신의 취향을 선택하세요.</div>
+      <div class="section-title2">당신의 취향을 선택하세요.</div>
 
       <form
         method="post"
@@ -28,12 +21,12 @@
         th:object="${FilterForm}"
       >
         <!-- 취향 선택 -->
-        <div class="preference-buttons">
+        <div class="preference-buttons2">
           <!-- 감성 카테고리 -->
           <div>
             <label
               for="comf"
-              class="preference-button"
+              class="preference-button2"
               th:classappend="${session.filteredProducts?.ctComf == 'Y'} ? 'selected' : ''"
             >
               편한
@@ -48,7 +41,7 @@
 
             <label
               for="fluffy"
-              class="preference-button"
+              class="preference-button2"
               th:classappend="${session.filteredProducts?.ctFluffy == 'Y'} ? 'selected' : ''"
             >
               푹신한
@@ -63,7 +56,7 @@
 
             <label
               for="light"
-              class="preference-button"
+              class="preference-button2"
               th:classappend="${session.filteredProducts?.ctLight == 'Y'} ? 'selected' : ''"
             >
               가벼운
@@ -78,7 +71,7 @@
 
             <label
               for="soft"
-              class="preference-button"
+              class="preference-button2"
               th:classappend="${session.filteredProducts?.ctSoft == 'Y'} ? 'selected' : ''"
             >
               부드러운
@@ -93,7 +86,7 @@
 
             <label
               for="flat"
-              class="preference-button"
+              class="preference-button2"
               th:classappend="${session.filteredProducts?.ctFlat == 'Y'} ? 'selected' : ''"
             >
               플랫한
@@ -108,7 +101,7 @@
 
             <label
               for="pretty"
-              class="preference-button"
+              class="preference-button2"
               th:classappend="${session.filteredProducts?.ctPretty == 'Y'} ? 'selected' : ''"
             >
               예쁜
@@ -123,7 +116,7 @@
 
             <label
               for="cute"
-              class="preference-button"
+              class="preference-button2"
               th:classappend="${session.filteredProducts?.ctCute == 'Y'} ? 'selected' : ''"
             >
               귀여운
@@ -138,7 +131,7 @@
 
             <label
               for="neat"
-              class="preference-button"
+              class="preference-button2"
               th:classappend="${session.filteredProducts?.ctNeat == 'Y'} ? 'selected' : ''"
             >
               깔끔한
@@ -153,7 +146,7 @@
 
             <label
               for="modern"
-              class="preference-button"
+              class="preference-button2"
               th:classappend="${session.filteredProducts?.ctModern == 'Y'} ? 'selected' : ''"
             >
               모던한
@@ -168,7 +161,7 @@
 
             <label
               for="wide"
-              class="preference-button"
+              class="preference-button2"
               th:classappend="${session.filteredProducts?.ctWide == 'Y'} ? 'selected' : ''"
             >
               발볼이 넓은
@@ -183,7 +176,7 @@
 
             <label
               for="narrow"
-              class="preference-button"
+              class="preference-button2"
               th:classappend="${session.filteredProducts?.ctNarrow == 'Y'} ? 'selected' : ''"
             >
               발볼이 좁은
@@ -198,7 +191,7 @@
 
             <label
               for="standard"
-              class="preference-button"
+              class="preference-button2"
               th:classappend="${session.filteredProducts?.ctStandard == 'Y'} ? 'selected' : ''"
             >
               발볼이 보통
@@ -213,7 +206,7 @@
 
             <label
               for="hip"
-              class="preference-button"
+              class="preference-button2"
               th:classappend="${session.filteredProducts?.ctHip == 'Y'} ? 'selected' : ''"
             >
               휘뚜루마뚜루
@@ -228,7 +221,7 @@
 
             <label
               for="cost"
-              class="preference-button"
+              class="preference-button2"
               th:classappend="${session.filteredProducts?.ctCost == 'Y'} ? 'selected' : ''"
             >
               가격이 착한
@@ -243,7 +236,7 @@
 
             <label
               for="strong"
-              class="preference-button"
+              class="preference-button2"
               th:classappend="${session.filteredProducts?.ctStrong == 'Y'} ? 'selected' : ''"
             >
               튼튼한
@@ -269,7 +262,7 @@
             />
             <label
               for="shoesSneakers"
-              class="preference-button"
+              class="preference-toggle"
               th:classappend="${session.filteredProducts?.pGroup == '스니커즈'} ? 'selected' : ''"
               >스니커즈</label
             >
@@ -282,7 +275,7 @@
             />
             <label
               for="shoesHeels"
-              class="preference-button"
+              class="preference-toggle"
               th:classappend="${session.filteredProducts?.pGroup == '구두'} ? 'selected' : ''"
               >구두</label
             >
@@ -295,7 +288,7 @@
             />
             <label
               for="shoesBoots"
-              class="preference-button"
+              class="preference-toggle"
               th:classappend="${session.filteredProducts?.pGroup == '부츠/워커'} ? 'selected' : ''"
               >부츠/워커</label
             >
@@ -308,7 +301,7 @@
             />
             <label
               for="shoesSandals"
-              class="preference-button"
+              class="preference-toggle"
               th:classappend="${session.filteredProducts?.pGroup == '샌들/슬리퍼'} ? 'selected' : ''"
               >샌들/슬리퍼</label
             >
@@ -336,8 +329,25 @@
                 <div
                   class="product-rating"
                   name="pd_rating"
-                  th:text="${product.pRating}"
+                  th:text="|⭐${product.pRating}|"
                 ></div>
+                <div class="keywords">
+                  <p th:if="${product.ctComf} == 'Y' ">편한</p>
+                  <p th:if="${product.ctFluffy} == 'Y' ">푹신한</p>
+                  <p th:if="${product.ctLight} == 'Y' ">가벼운</p>
+                  <p th:if="${product.ctSoft} == 'Y' ">부드러운</p>
+                  <p th:if="${product.ctFlat} == 'Y' ">플랫한</p>
+                  <p th:if="${product.ctPretty} == 'Y' ">예쁜</p>
+                  <p th:if="${product.ctCute} == 'Y' ">귀여운</p>
+                  <p th:if="${product.ctNeat} == 'Y' ">깔끔한</p>
+                  <p th:if="${product.ctModern} == 'Y' ">모던함</p>
+                  <p th:if="${product.ctHip} == 'Y' ">휘뚜루마뚜루</p>
+                  <p th:if="${product.ctWide} == 'Y' ">발볼이 넓은</p>
+                  <p th:if="${product.ctNarrow} == 'Y' ">발볼이 좁은</p>
+                  <p th:if="${product.ctStandard} == 'Y' ">발볼이 보통</p>
+                  <p th:if="${product.ctCost} == 'Y' ">가격이 착한</p>
+                  <p th:if="${product.ctStrong} == 'Y' ">튼튼한</p>
+                </div>
                 <div class="price-line">
                   <span
                     class="product-discount"
@@ -349,23 +359,6 @@
                     th:text="${product.pPrice}"
                   ></span>
                 </div>
-              </div>
-              <div>
-                <p th:if="${product.ctComf} == 'Y' ">편한</p>
-                <p th:if="${product.ctFluffy} == 'Y' ">푹신한</p>
-                <p th:if="${product.ctLight} == 'Y' ">가벼운</p>
-                <p th:if="${product.ctSoft} == 'Y' ">부드러운</p>
-                <p th:if="${product.ctFlat} == 'Y' ">플랫한</p>
-                <p th:if="${product.ctPretty} == 'Y' ">예쁜</p>
-                <p th:if="${product.ctCute} == 'Y' ">귀여운</p>
-                <p th:if="${product.ctNeat} == 'Y' ">깔끔한</p>
-                <p th:if="${product.ctModern} == 'Y' ">모던함</p>
-                <p th:if="${product.ctHip} == 'Y' ">휘뚜루마뚜루</p>
-                <p th:if="${product.ctWide} == 'Y' ">발볼이 넓은</p>
-                <p th:if="${product.ctNarrow} == 'Y' ">발볼이 좁은</p>
-                <p th:if="${product.ctStandard} == 'Y' ">발볼이 보통</p>
-                <p th:if="${product.ctCost} == 'Y' ">가격이 착한</p>
-                <p th:if="${product.ctStrong} == 'Y' ">튼튼한</p>
               </div>
             </a>
           </div>
